--- a/FRONTEND/alkotok.html
+++ b/FRONTEND/alkotok.html
@@ -7,29 +7,64 @@
     <link rel="stylesheet" href="alkotok.css">
 </head>
 <body>
+    <nav class="navbar">
+        <ul class="navbar-menu">
+            <li><a href="#">Bemutatkozás</a></li>
+            <li><a href="alkotok.html">Alkotók</a></li>
+            <li><a href="#">Elérhetőségek</a></li>
+            <li><a href="#">Kosár</a></li>
+            <li><a href="#">Profil</a></li>
+        </ul>
+        <div class="navbar-toggle" id="mobile-menu">
+            ☰
+        </div>
+    </nav>
+
     <div class="alkotok-container">
         <table class="alkotok-table">
             <tr>
-                <td id="alkoto-kepei_menu">1.</td>
-                <td id="alkoto-kepei_menu">2.</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Almási_Nana/purple-melody-nana-almasi-painting.jpg" alt="Almási Nana" title="Almási Nana">Almási Nana</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Bozsik_Panka/akril-festmeny-elafonisi-bozsik-panka_480x480.jpg" alt="Bozsik Panka" title="Bozsik Panka">Bozsik Panka</td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu">3.</td>
-                <td id="alkoto-kepei_menu">4.</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Burai-Huber_Janka/modern-festmeny-autumn-winter-burai-huber-janka.jpg" alt="Burai-Huber Janka" title="Burai-Huber Janka">Burai-Huber Janka</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Farkas_Zsófi/akril-festmeny-relax-farkas-zsofi.jpg" alt="Farkas Zsófi" title="Farkas Zsófi">Farkas Zsófi</td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu">5.</td>
-                <td id="alkoto-kepei_menu">6.</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Fazekas_Aranka/festmeny-fairly-garden-fazekas-aranka_480x480.jpg" alt="Fazekas Aranka" title="Fazekas Aranka">Fazekas Aranka</td>
+                <td id="alkoto-kepei_menu"><img src="festok/FLOW/kortars-magyar-festmenyek-flow-waving-coast.jpg" alt="FLOW" title="FLOW">FLOW</td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu">7.</td>
-                <td id="alkoto-kepei_menu">8.</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Hornyik_Zoltán/a-termeszet-szinei-hornyik-zoltan-festmeny.jpg" alt="Hornyik Zoltán" title="Hornyik Zoltán">Hornyik Zoltán</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Jana_Kowalsky/kortars-festmeny-time-j-kowalsky_480x480.jpg" alt="Jana Kowalsky" title="Jana Kowalsky">Jana Kowalsky</td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu">9.</td>
-                <td id="alkoto-kepei_menu">10.</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Megyeri_Krisztina/sarkantyus-nyari-kert-megyeri-krisztina_480x480.jpg" alt="Megyeri Krisztina" title="Megyeri Krisztina">Megyeri Krisztina</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Orosz_G_Balázs/akril-festmeny-quantum-grid-orosz-gellert-balazs.jpg" alt="Orosz G. Balázs" title="Orosz G. Balázs">Orosz G. Balázs</td>
+            </tr>
+            <tr>
+                <td id="alkoto-kepei_menu"><img src="festok/Püspök_Anita/kortars-festmeny-attraction-anita-puspok.jpg" alt="Püspök Anita" title="Püspök_Anita">Püspök Anita</td>
+                <td id="alkoto-kepei_menu"><img src="festok/SAGITTARIUS/akril-festmeny-koktel-sagittarius.jpg" alt="SAGITTARIUS" title="SAGITTARIUS">SAGITTARIUS</td>
+            </tr>
+            <tr>
+                <td id="alkoto-kepei_menu"><img src="festok/Sipos_Ferenc/olaj-festmeny-glass-mosaic2-sipos-ferenc_480x480.jpg" alt="Sipos Ferenc" title="Sipos Ferenc">Sipos Ferenc</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Stone_Luna/sandstone-absztrakt-festmeny-luna-stone_480x480.jpg" alt="Stone Luna" title="Stone Luna">Stone Luna</td>
+            </tr>
+            <tr>
+                <td id="alkoto-kepei_menu"><img src="festok/Szabó_Zoltán/modern-kepek-szabo-zoltan-pezsges.jpg" alt="Szabó Zoltán" title="Szabó Zoltán">Szabó Zoltán</td>
+                <td id="alkoto-kepei_menu"><img src="festok/Sápi_Marcell/festmeny-cyan-zebra-sapi-marcell_480x480.jpg" alt="Sápi Marcell" title="Sápi Marcell">Sápi Marcell</td>
+            </tr>
+            <tr>
+                <td id="alkoto-kepei_menu"><img src="festok/Tóth_Anna/kortars-festmeny-orveny-II-toth-anna_480x480.jpg" alt="Tóth Anna" title="Tóth Anna">Tóth Anna</td>
+                <td id="alkoto-kepei_menu"><img src="festok/U_Badey/nasty-by-nature-badey-abstract.jpg" alt="U. Badey" title="U. Badey">U. Badey</td>
             </tr>
         </table>
     </div>
+
+    <script>
+    document.getElementById("mobile-menu").addEventListener("click", function() {
+    document.querySelector(".navbar-menu").classList.toggle("active");
+    });
+    </script>
 </body>
 </html>
