--- a/FRONTEND/alkotok.html
+++ b/FRONTEND/alkotok.html
@@ -11,8 +11,8 @@
         <ul class="navbar-menu">
             <li><a href="#">Bemutatkozás</a></li>
             <li><a href="alkotok.html">Alkotók</a></li>
-            <li><a href="#">Elérhetőségek</a></li>
-            <li><a href="#">Kosár</a></li>
+            <li><a href="elerhetosegek.html">Elérhetőségeink</a></li>
+            <li><a href="kosar.html">Kosár</a></li>
             <li><a href="#">Profil</a></li>
         </ul>
         <div class="navbar-toggle" id="mobile-menu">
