--- a/FRONTEND/elerhetosegek.html
+++ b/FRONTEND/elerhetosegek.html
@@ -13,7 +13,7 @@
             <li><a href="alkotok.html">Alkotók</a></li>
             <li><a href="elerhetosegek.html">Elérhetőségeink</a></li>
             <li><a href="kosar.html">Kosár</a></li>
-            <li><a href="#">Profil</a></li>
+            <li><a href="profil.html">Profil</a></li>
         </ul>
         <div class="navbar-toggle" id="mobile-menu">
             ☰
