--- a/FRONTEND/elerhetosegek.html
+++ b/FRONTEND/elerhetosegek.html
@@ -24,7 +24,7 @@
         <div id="tartalom">
             <ul id="icons">
                 <li><a href="https://x.com"><img src="elerhetosegek_kepek/new-2023-twitter-logo-x-icon-design_1017-45418.jpg" alt="" width="40px" height="40px"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100032786691974&locale=hu_HU"><img src="elerhetosegek_kepek/apps.30645.9007199266245907.cb06f1f9-9154-408e-b4ef-d19f2325893b.ac3b465e-4384-42a8-9142-901c0405e1bc" alt="" width="40px" height="40px"></a></li>
+                <li><a href="https://www.facebook.com"><img src="elerhetosegek_kepek/apps.30645.9007199266245907.cb06f1f9-9154-408e-b4ef-d19f2325893b.ac3b465e-4384-42a8-9142-901c0405e1bc" alt="" width="40px" height="40px"></a></li>
                 <li><a href="https://hu.pinterest.com"><img src="elerhetosegek_kepek/Pinterest-Emblem.png" alt="" width="50px" height="40px"></a></li>
                 <li><a href="https://www.instagram.com"><img src="elerhetosegek_kepek/Instagram_logo_2022.svg.webp" alt="" width="40px" height="40px"></a></li>
             </ul>
