--- a/FRONTEND/kosar.html
+++ b/FRONTEND/kosar.html
@@ -23,7 +23,7 @@
     <div class="wrap">
     <header>
     <h1>Kosarad</h1>
-    <div class="small">(termékek hozzáadása, mennyiség változtatás, törlés)</div>
+    <!--<div class="small">(termékek hozzáadása, mennyiség változtatás, törlés)</div>-->
     </header>
 
 
