--- a/FRONTEND/profil.html
+++ b/FRONTEND/profil.html
@@ -15,94 +15,46 @@
             <li><a href="kosar.html">Kosár</a></li>
             <li><a href="profil.html">Profil</a></li>
         </ul>
-        <div class="navbar-toggle" id="mobile-menu">
-            ☰
+        <div class="navbar-toggle" id="mobile-menu">☰</div>
+    </nav>
+
+    <main class="profile-container">
+        <div class="profile-card">
+            <div class="tab-buttons">
+                <button class="active" onclick="showTab('login')">Bejelentkezés</button>
+                <button onclick="showTab('register')">Regisztráció</button>
+            </div>
+
+            <div id="login" class="tab-content active">
+                <input type="text" placeholder="Felhasználónév vagy email">
+                <input type="password" placeholder="Jelszó">
+                <div class="button-row">
+                    <button class="primary">Bejelentkezés</button>
+                </div>
+            </div>
+
+            <div id="register" class="tab-content">
+                <input type="text" placeholder="Felhasználónév">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Jelszó">
+                <button class="primary">Regisztráció</button>
+            </div>
         </div>
-
-    <div class="container">
-    <div class="hero">
-      <div class="card">
-        <h1>Demo: Profil, bejelentkezés és regisztráció</h1>
-        <p>Egyszerű, front-end demo: helyi tárolást (localStorage) használ a felhasználók mentéséhez. Nem javasolt éles használatra.</p>
-        <hr>
-        <ul>
-          <li class="meta">Regisztrációkor megadsz egy felhasználónevet, emailt és jelszót.</li>
-          <li class="meta">A jelszavak a demo kedvéért egyszerűen kódolva tárolódnak — NE használd valós jelszavakkal.</li>
-          <li class="meta">Kijelentkezéshez használd a <strong>kijelentkezés</strong> gombot.</li>
-        </ul>
-      </div>
-    </div>
-
-    <div>
-      <div class="card" id="authCard">
-        <div class="tabs">
-          <div class="tab active" data-tab="login">Bejelentkezés</div>
-          <div class="tab" data-tab="register">Regisztráció</div>
-        </div>
-
-        <div id="login" class="pane">
-          <form id="loginForm">
-            <div>
-              <label for="loginUser">Felhasználónév vagy email</label>
-              <input id="loginUser" type="text" required />
-            </div>
-            <div>
-              <label for="loginPass">Jelszó</label>
-              <input id="loginPass" type="password" required />
-            </div>
-            <div class="row">
-              <button class="btn primary" type="submit">Bejelentkezés</button>
-              <button class="btn ghost" type="button" id="fillTest">Teszt felhasználó</button>
-            </div>
-            <div id="loginMsg" class="note"></div>
-          </form>
-        </div>
-
-        <div id="register" class="pane" style="display:none">
-          <form id="regForm">
-            <div>
-              <label for="regUser">Felhasználónév</label>
-              <input id="regUser" type="text" minlength="3" required />
-            </div>
-            <div>
-              <label for="regEmail">Email</label>
-              <input id="regEmail" type="email" required />
-            </div>
-            <div>
-              <label for="regPass">Jelszó (min. 6 karakter)</label>
-              <input id="regPass" type="password" minlength="6" required />
-            </div>
-            <div class="row">
-              <button class="btn primary" type="submit">Regisztráció</button>
-              <button class="btn ghost" type="button" id="toLogin">Már van fiókom</button>
-            </div>
-            <div id="regMsg" class="note"></div>
-          </form>
-        </div>
-
-        <div id="profileCard" class="profile">
-          <div class="card">
-            <h3 id="profileName">Profil</h3>
-            <p class="meta" id="profileEmail"></p>
-            <p class="meta" id="profileJoined"></p>
-            <div class="row">
-              <button class="btn primary" id="logout">Kijelentkezés</button>
-              <button class="btn ghost" id="deleteAccount">Fiók törlése</button>
-            </div>
-            <div id="profileMsg" class="note"></div>
-          </div>
-        </div>
-      </div>
-      <footer>Ez egy front-end demo — nincs szerver oldali biztonság.</footer>
-    </div>
-  </div>
-
-  <script src="profil.js"></script>
+    </main>
 
     <script>
-    document.getElementById("mobile-menu").addEventListener("click", function() {
-    document.querySelector(".navbar-menu").classList.toggle("active");
-    });
+        document.getElementById("mobile-menu").addEventListener("click", function() {
+            document.querySelector(".navbar-menu").classList.toggle("active");
+        });
+
+        function showTab(tabName) {
+            const tabs = document.querySelectorAll('.tab-content');
+            const buttons = document.querySelectorAll('.tab-buttons button');
+            tabs.forEach(tab => tab.classList.remove('active'));
+            buttons.forEach(btn => btn.classList.remove('active'));
+            document.getElementById(tabName).classList.add('active');
+            event.target.classList.add('active');
+        }
     </script>
 </body>
 </html>
