--- a/FRONTEND/kosar.html
+++ b/FRONTEND/kosar.html
@@ -22,7 +22,7 @@
 
     <div class="wrap">
     <header>
-    <h1>Kosarad</h1>
+    <h1>Elérhető termékeink:</h1>
     <!--<div class="small">(termékek hozzáadása, mennyiség változtatás, törlés)</div>-->
     </header>
 
@@ -57,7 +57,7 @@
     </div>
 
 
-    <script src="kosar.js"></script>
+    <script src="../BACKEND/kosar.js"></script>
 
     <script>
     document.getElementById("mobile-menu").addEventListener("click", function() {
