--- a/FRONTEND/profil.html
+++ b/FRONTEND/profil.html
@@ -56,5 +56,8 @@
             event.target.classList.add('active');
         }
     </script>
+
+    <script src="../BACKEND/profil.js"></script>
+
 </body>
 </html>
