--- a/FRONTEND/alkotok.html
+++ b/FRONTEND/alkotok.html
@@ -21,44 +21,46 @@
     </nav>
 
     <div class="alkotok-container">
+        <h1>Festők:</h1>
         <table class="alkotok-table">
             <tr>
-                <td id="alkoto-kepei_menu"><img src="festok/Almási_Nana/purple-melody-nana-almasi-painting.jpg" alt="Almási Nana" title="Almási Nana">Almási Nana</td>
-                <td id="alkoto-kepei_menu"><img src="festok/Bozsik_Panka/akril-festmeny-elafonisi-bozsik-panka_480x480.jpg" alt="Bozsik Panka" title="Bozsik Panka">Bozsik Panka</td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Almási_Nana/jellemzes.html"><img src="festok/Almási_Nana/purple-melody-nana-almasi-painting.jpg" alt="Almási Nana" title="Almási Nana">Almási Nana</a></td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Bozsik_Panka/jellemzes.html"><img src="festok/Bozsik_Panka/akril-festmeny-elafonisi-bozsik-panka_480x480.jpg" alt="Bozsik Panka" title="Bozsik Panka">Bozsik Panka</a></td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu"><img src="festok/Burai-Huber_Janka/modern-festmeny-autumn-winter-burai-huber-janka.jpg" alt="Burai-Huber Janka" title="Burai-Huber Janka">Burai-Huber Janka</td>
-                <td id="alkoto-kepei_menu"><img src="festok/Farkas_Zsófi/akril-festmeny-relax-farkas-zsofi.jpg" alt="Farkas Zsófi" title="Farkas Zsófi">Farkas Zsófi</td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Burai-Huber_Janka/jellemzes.html"><img src="festok/Burai-Huber_Janka/modern-festmeny-autumn-winter-burai-huber-janka.jpg" alt="Burai-Huber Janka" title="Burai-Huber Janka">Burai-Huber Janka</a></td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Farkas_Zsófi/jellemzes.html"><img src="festok/Farkas_Zsófi/akril-festmeny-relax-farkas-zsofi.jpg" alt="Farkas Zsófi" title="Farkas Zsófi">Farkas Zsófi</a></td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu"><img src="festok/Fazekas_Aranka/festmeny-fairly-garden-fazekas-aranka_480x480.jpg" alt="Fazekas Aranka" title="Fazekas Aranka">Fazekas Aranka</td>
-                <td id="alkoto-kepei_menu"><img src="festok/FLOW/kortars-magyar-festmenyek-flow-waving-coast.jpg" alt="FLOW" title="FLOW">FLOW</td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Fazekas_Aranka/jellemzes.html"><img src="festok/Fazekas_Aranka/festmeny-fairly-garden-fazekas-aranka_480x480.jpg" alt="Fazekas Aranka" title="Fazekas Aranka">Fazekas Aranka</a></td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/FLOW/jellemzes.html"><img src="festok/FLOW/kortars-magyar-festmenyek-flow-waving-coast.jpg" alt="FLOW" title="FLOW">FLOW</a></td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu"><img src="festok/Hornyik_Zoltán/a-termeszet-szinei-hornyik-zoltan-festmeny.jpg" alt="Hornyik Zoltán" title="Hornyik Zoltán">Hornyik Zoltán</td>
-                <td id="alkoto-kepei_menu"><img src="festok/Jana_Kowalsky/kortars-festmeny-time-j-kowalsky_480x480.jpg" alt="Jana Kowalsky" title="Jana Kowalsky">Jana Kowalsky</td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Hornyik_Zoltán/jellemzes.html"><img src="festok/Hornyik_Zoltán/a-termeszet-szinei-hornyik-zoltan-festmeny.jpg" alt="Hornyik Zoltán" title="Hornyik Zoltán">Hornyik Zoltán</a></td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Jana_Kowalsky/jellemzes.html"><img src="festok/Jana_Kowalsky/kortars-festmeny-time-j-kowalsky_480x480.jpg" alt="Jana Kowalsky" title="Jana Kowalsky">Jana Kowalsky</a></td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu"><img src="festok/Megyeri_Krisztina/sarkantyus-nyari-kert-megyeri-krisztina_480x480.jpg" alt="Megyeri Krisztina" title="Megyeri Krisztina">Megyeri Krisztina</td>
-                <td id="alkoto-kepei_menu"><img src="festok/Orosz_G_Balázs/akril-festmeny-quantum-grid-orosz-gellert-balazs.jpg" alt="Orosz G. Balázs" title="Orosz G. Balázs">Orosz G. Balázs</td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Megyeri_Krisztina/jellemzes.html"><img src="festok/Megyeri_Krisztina/sarkantyus-nyari-kert-megyeri-krisztina_480x480.jpg" alt="Megyeri Krisztina" title="Megyeri Krisztina">Megyeri Krisztina</a></td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Orosz_G_Balázs/jellemzes.html"><img src="festok/Orosz_G_Balázs/akril-festmeny-quantum-grid-orosz-gellert-balazs.jpg" alt="Orosz G. Balázs" title="Orosz G. Balázs">Orosz G. Balázs</a></td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu"><img src="festok/Püspök_Anita/kortars-festmeny-attraction-anita-puspok.jpg" alt="Püspök Anita" title="Püspök_Anita">Püspök Anita</td>
-                <td id="alkoto-kepei_menu"><img src="festok/SAGITTARIUS/akril-festmeny-koktel-sagittarius.jpg" alt="SAGITTARIUS" title="SAGITTARIUS">SAGITTARIUS</td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Püspök_Anita/jellemzes.html"><img src="festok/Püspök_Anita/kortars-festmeny-attraction-anita-puspok.jpg" alt="Püspök Anita" title="Püspök_Anita">Püspök Anita</a></td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/SAGITTARIUS/jellemzes.html"><img src="festok/SAGITTARIUS/akril-festmeny-koktel-sagittarius.jpg" alt="SAGITTARIUS" title="SAGITTARIUS">SAGITTARIUS</a></td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu"><img src="festok/Sipos_Ferenc/olaj-festmeny-glass-mosaic2-sipos-ferenc_480x480.jpg" alt="Sipos Ferenc" title="Sipos Ferenc">Sipos Ferenc</td>
-                <td id="alkoto-kepei_menu"><img src="festok/Stone_Luna/sandstone-absztrakt-festmeny-luna-stone_480x480.jpg" alt="Stone Luna" title="Stone Luna">Stone Luna</td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Sipos_Ferenc/jellemzes.html"><img src="festok/Sipos_Ferenc/olaj-festmeny-glass-mosaic2-sipos-ferenc_480x480.jpg" alt="Sipos Ferenc" title="Sipos Ferenc">Sipos Ferenc</a></td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Stone_Luna/jellemzes.html"><img src="festok/Stone_Luna/sandstone-absztrakt-festmeny-luna-stone_480x480.jpg" alt="Stone Luna" title="Stone Luna">Stone Luna</a></td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu"><img src="festok/Szabó_Zoltán/modern-kepek-szabo-zoltan-pezsges.jpg" alt="Szabó Zoltán" title="Szabó Zoltán">Szabó Zoltán</td>
-                <td id="alkoto-kepei_menu"><img src="festok/Sápi_Marcell/festmeny-cyan-zebra-sapi-marcell_480x480.jpg" alt="Sápi Marcell" title="Sápi Marcell">Sápi Marcell</td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Szabó_Zoltán/jellemzes.html"><img src="festok/Szabó_Zoltán/modern-kepek-szabo-zoltan-pezsges.jpg" alt="Szabó Zoltán" title="Szabó Zoltán">Szabó Zoltán</a></td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Sápi_Marcell/jellemzes.html"><img src="festok/Sápi_Marcell/festmeny-cyan-zebra-sapi-marcell_480x480.jpg" alt="Sápi Marcell" title="Sápi Marcell">Sápi Marcell</a></td>
             </tr>
             <tr>
-                <td id="alkoto-kepei_menu"><img src="festok/Tóth_Anna/kortars-festmeny-orveny-II-toth-anna_480x480.jpg" alt="Tóth Anna" title="Tóth Anna">Tóth Anna</td>
-                <td id="alkoto-kepei_menu"><img src="festok/U_Badey/nasty-by-nature-badey-abstract.jpg" alt="U. Badey" title="U. Badey">U. Badey</td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Tóth_Anna/jellemzes.html"><img src="festok/Tóth_Anna/kortars-festmeny-orveny-II-toth-anna_480x480.jpg" alt="Tóth Anna" title="Tóth Anna">Tóth Anna</a></td>
+                <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/U_Badey/jellemzes.html"><img src="festok/U_Badey/nasty-by-nature-badey-abstract.jpg" alt="U. Badey" title="U. Badey">U. Badey</a></td>
             </tr>
         </table>
+        <h1>Szobrászok:</h1>
     </div>
 
     <script>
