--- a/FRONTEND/kosar.html
+++ b/FRONTEND/kosar.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <ul class="navbar-menu">
-            <li><a href="#">Bemutatkozás</a></li>
+            <li><a href="bemutatkozas.html">Bemutatkozás</a></li>
             <li><a href="alkotok.html">Alkotók</a></li>
             <li><a href="elerhetosegek.html">Elérhetőségeink</a></li>
             <li><a href="kosar.html">Kosár</a></li>
