--- a/FRONTEND/kosar.html
+++ b/FRONTEND/kosar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kosár</title>
+    <title>Webshop</title>
     <link rel="stylesheet" href="kosar.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
             <li><a href="bemutatkozas.html">Bemutatkozás</a></li>
             <li><a href="alkotok.html">Alkotók</a></li>
             <li><a href="elerhetosegek.html">Elérhetőségeink</a></li>
-            <li><a href="kosar.html">Kosár</a></li>
+            <li><a href="kosar.html">Webshop</a></li>
             <li><a href="profil.html">Profil</a></li>
         </ul>
         <div class="navbar-toggle" id="mobile-menu">
