--- a/FRONTEND/profil.html
+++ b/FRONTEND/profil.html
@@ -12,7 +12,7 @@
             <li><a href="bemutatkozas.html">Bemutatkozás</a></li>
             <li><a href="alkotok.html">Alkotók</a></li>
             <li><a href="elerhetosegek.html">Elérhetőségeink</a></li>
-            <li><a href="kosar.html">Kosár</a></li>
+            <li><a href="kosar.html">Webshop</a></li>
             <li><a href="profil.html">Profil</a></li>
         </ul>
         <div class="navbar-toggle" id="mobile-menu">☰</div>
@@ -55,6 +55,12 @@
             document.getElementById(tabName).classList.add('active');
             event.target.classList.add('active');
         }
+    </script>
+
+    <script>
+    document.getElementById("mobile-menu").addEventListener("click", function() {
+    document.querySelector(".navbar-menu").classList.toggle("active");
+    });
     </script>
 
     <script src="../BACKEND/profil.js"></script>
