--- a/FRONTEND/alkotok.html
+++ b/FRONTEND/alkotok.html
@@ -21,7 +21,7 @@
     </nav>
 
     <div class="alkotok-container">
-        <h1>Festők:</h1>
+        <!--<h1>Festők:</h1>-->
         <table class="alkotok-table">
             <tr>
                 <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/Almási_Nana/jellemzes.html"><img src="festok/Almási_Nana/purple-melody-nana-almasi-painting.jpg" alt="Almási Nana" title="Almási Nana">Almási Nana</a></td>
@@ -60,7 +60,6 @@
                 <td id="alkoto-kepei_menu"><a href="../FRONTEND/festok/U_Badey/jellemzes.html"><img src="festok/U_Badey/nasty-by-nature-badey-abstract.jpg" alt="U. Badey" title="U. Badey">U. Badey</a></td>
             </tr>
         </table>
-        <h1>Szobrászok:</h1>
     </div>
 
     <script>
