--- a/FRONTEND/profiladatok.html
+++ b/FRONTEND/profiladatok.html
@@ -52,6 +52,27 @@
 <input id="address" type="text" placeholder="Lakcím">
 </div>
 
+<h3>Fizetési adatok</h3>
+
+<div class="form-row">
+<label>Bankszámlaszám</label>
+<input id="address" type="text" placeholder="Bankszámlaszám">
+</div>
+
+<div class="form-row">
+<label>Bankkártyaszám</label>
+<input id="address" type="text" placeholder="Bankkártyaszám">
+</div>
+
+<div class="form-row">
+<label>Kártyán szereplő név</label>
+<input id="address" type="text" placeholder="Kártyán szereplő név">
+</div>
+
+<div class="form-row">
+<label>Számlázási cím</label>
+<input id="address" type="text" placeholder="Számlázási cím">
+</div>
 
 <div class="actions">
 <button class="btn primary" id="saveBtn">Mentés</button>
